--- a/index.html
+++ b/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sitio Web Responsivo</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Café Aromático</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <header>
-    <h1>Mi Web Responsiva</h1>
+  <header class="header">
+    <h1>Café Aromático</h1>
     <nav>
       <ul>
         <li><a href="#">Inicio</a></li>
-        <li><a href="#">Acerca</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Menú</a></li>
+        <li><a href="#">Ubicación</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="hero">
-    <h2>Bienvenidos</h2>
-    <p>Esta es una web creada con diseño responsivo usando rejillas fluidas.</p>
+    <h2>El mejor café artesanal</h2>
+    <p>Hecho con pasión, servido con cariño.</p>
   </section>
 
-  <section class="grid">
+  <section class="about">
+    <h2>¿Por qué elegirnos?</h2>
+    <p>Utilizamos granos seleccionados de la más alta calidad y tostados artesanalmente para ofrecerte una experiencia única.</p>
+  </section>
+
+  <section class="menu-grid">
     <article>
-      <img src="https://picsum.photos/400/300?1" alt="Imagen 1">
-      <h3>Contenido 1</h3>
-      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <img src="https://picsum.photos/400/300?coffee1" alt="Café espresso">
+      <h3>Espresso</h3>
+      <p>Fuerte, intenso y lleno de aroma.</p>
     </article>
 
     <article>
-      <img src="https://picsum.photos/400/300?2" alt="Imagen 2">
-      <h3>Contenido 2</h3>
-      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <img src="https://picsum.photos/400/300?coffee2" alt="Cappuccino">
+      <h3>Cappuccino</h3>
+      <p>Perfecto balance entre café, leche y espuma.</p>
     </article>
 
     <article>
-      <img src="https://picsum.photos/400/300?3" alt="Imagen 3">
-      <h3>Contenido 3</h3>
-      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <img src="https://picsum.photos/400/300?coffee3" alt="Latte">
+      <h3>Latte</h3>
+      <p>Suave y cremoso, ideal para cualquier momento.</p>
     </article>
   </section>
 
   <footer>
-    <p>© 2025 - Mi Web Responsiva</p>
+    <p>© 2025 Café Aromático – Todos los derechos reservados.</p>
   </footer>
 
 </body>
