--- a/index.html
+++ b/index.html
@@ -1,57 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Café Aromático</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Explorando el Sistema Solar - Página Responsiva</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <header class="header">
-    <h1>Café Aromático</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Menú</a></li>
-        <li><a href="#">Ubicación</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+    <h1>Explorando el Sistema Solar 🌌</h1>
+    <p class="device-msg">MÓVIL: 1 columna</p>
+</header>
 
-  <section class="hero">
-    <h2>El mejor café artesanal</h2>
-    <p>Hecho con pasión, servido con cariño.</p>
-  </section>
+<main class="container">
 
-  <section class="about">
-    <h2>¿Por qué elegirnos?</h2>
-    <p>Utilizamos granos seleccionados de la más alta calidad y tostados artesanalmente para ofrecerte una experiencia única.</p>
-  </section>
+    <section class="card card-1">
+        <h2>1. ¿Qué es el Sistema Solar?</h2>
+        <p>El Sistema Solar es un conjunto de cuerpos celestes que orbitan alrededor del Sol. Incluye planetas, lunas, asteroides, cometas y más.</p>
 
-  <section class="menu-grid">
-    <article>
-      <img src="https://picsum.photos/400/300?coffee1" alt="Café espresso">
-      <h3>Espresso</h3>
-      <p>Fuerte, intenso y lleno de aroma.</p>
-    </article>
+        <div class="info-box">
+            <strong>Dato:</strong> El Sol representa más del 99% de la masa total del Sistema Solar.
+        </div>
 
-    <article>
-      <img src="https://picsum.photos/400/300?coffee2" alt="Cappuccino">
-      <h3>Cappuccino</h3>
-      <p>Perfecto balance entre café, leche y espuma.</p>
-    </article>
+        <img src="https://picsum.photos/600/300?space1" loading="lazy" alt="Espacio" class="img">
+    </section>
 
-    <article>
-      <img src="https://picsum.photos/400/300?coffee3" alt="Latte">
-      <h3>Latte</h3>
-      <p>Suave y cremoso, ideal para cualquier momento.</p>
-    </article>
-  </section>
+    <section class="card card-2">
+        <h2>2. Los Planetas 🪐</h2>
+        <p>Los ocho planetas del Sistema Solar se dividen en dos grupos:</p>
 
-  <footer>
-    <p>© 2025 Café Aromático – Todos los derechos reservados.</p>
-  </footer>
+        <ul>
+            <li><strong>Rocosos:</strong> Mercurio, Venus, Tierra y Marte</li>
+            <li><strong>Gaseosos:</strong> Júpiter, Saturno, Urano y Neptuno</li>
+        </ul>
+
+        <div class="info-box">
+            <strong>Dato curioso:</strong> ¡Júpiter es tan grande que todos los demás planetas cabrían dentro de él!
+        </div>
+
+        <img src="https://picsum.photos/600/300?space2" loading="lazy" alt="Planetas" class="img">
+    </section>
+
+    <section class="card card-3">
+        <h2>3. Exploración Espacial 🚀</h2>
+        <p>Las misiones espaciales han permitido obtener imágenes reales de los planetas, estudiar sus atmósferas y descubrir satélites desconocidos.</p>
+
+        <div class="info-box">
+            <strong>Misión destacada:</strong> <br> La Voyager 1 es el objeto humano más alejado de la Tierra.</div>
+
+        <img src="https://picsum.photos/600/300?space3" loading="lazy" alt="Nave espacial" class="img">
+    </section>
+
+</main>
+
+<footer>
+    <p>© 2025 - Proyecto Educativo del Sistema Solar</p>
+</footer>
 
 </body>
 </html>
