--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-    /* Paleta temática: Azul espacial, gris oscuro, blanco */
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Explorando el Sistema Solar - Página Responsiva</title>
+    /*<link rel="stylesheet" href="styles.css">*/
+        /* Paleta temática: Azul espacial, gris oscuro, blanco */
 :root {
     --azul-espacio: #0A1A2F;
     --azul-claro: #13345B;
@@ -112,11 +118,6 @@ header {
         width: 33.33%;
     }
 }
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explorando el Sistema Solar - Página Responsiva</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
