--- a/index.html
+++ b/index.html
@@ -4,62 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maravillas del Océano - Página Responsiva</title>
+    <title>Maravillas de la Naturaleza - Página Responsiva</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<header>
-    <h1>Maravillas del Océano 🌊</h1>
-    <p class="device-msg">MÓVIL: 1 columna</p>
+<header class="header-banner">
+    <div class="overlay">
+        <h1>Maravillas de la Naturaleza 🌿</h1>
+        <p class="device-msg">MÓVIL: Diseño adaptable en 1 columna</p>
+    </div>
 </header>
 
-<main class="container">
+<main class="container-alt">
 
-    <section class="card card-1">
-        <h2>1. La Inmensidad del Océano</h2>
-        <p>Los océanos cubren más del 70% del planeta y son fundamentales para la vida terrestre y marina.</p>
+    <section class="card-alt">
+        <h2>1. Bosques del Mundo</h2>
+        <p>Los bosques son el hogar de millones de especies y ayudan a mantener el equilibrio climático del planeta.</p>
 
         <div class="info-box">
-            <strong>Dato:</strong> Se estima que solo conocemos el 5% del océano.
+            <strong>Sabías que...</strong> El 80% de la biodiversidad terrestre vive en los bosques.
         </div>
 
-        <img src="https://picsum.photos/600/300?ocean1" loading="lazy" alt="Océano profundo" class="img">
+        <img src="https://picsum.photos/600/300?forest" loading="lazy" alt="Bosque frondoso" class="img-alt">
     </section>
 
-    <section class="card card-2">
-        <h2>2. Vida Marina 🐠</h2>
-        <p>En el océano viven millones de especies, desde diminutos microorganismos hasta enormes ballenas.</p>
+    <section class="card-alt">
+        <h2>2. Montañas Majestuosas 🏔️</h2>
+        <p>Las montañas se formaron por movimientos tectónicos y erosionan lentamente por miles de años.</p>
 
         <ul>
-            <li><strong>Peces:</strong> Más de 33,000 especies identificadas</li>
-            <li><strong>Mamíferos marinos:</strong> Delfines, orcas, ballenas</li>
-            <li><strong>Invertebrados:</strong> Pulpos, medusas, corales</li>
+            <li><strong>Cordilleras famosas:</strong> Andes, Himalayas, Alpes</li>
+            <li><strong>Cumbre más alta:</strong> Monte Everest (8,849 m)</li>
         </ul>
 
         <div class="info-box">
-            <strong>Dato curioso:</strong> El pulpo tiene tres corazones y sangre azul.
+            <strong>Dato curioso:</strong> Hay montañas submarinas más altas que algunas en tierra.
         </div>
 
-        <img src="https://picsum.photos/600/300?ocean2" loading="lazy" alt="Vida marina" class="img">
+        <img src="https://picsum.photos/600/300?mountain" loading="lazy" alt="Cordillera nevada" class="img-alt">
     </section>
 
-    <section class="card card-3">
-        <h2>3. Exploración Submarina 🤿</h2>
-        <p>La tecnología submarina permite investigar zonas de alta presión, oscuridad total y temperaturas extremas.</p>
+    <section class="card-alt">
+        <h2>3. Desiertos Fascinantes 🏜️</h2>
+        <p>Aunque parezcan vacíos, los desiertos albergan una sorprendente cantidad de vida adaptada a condiciones extremas.</p>
 
         <div class="info-box">
-            <strong>Proyecto destacado:</strong> <br> El explorador DSV Alvin ha permitido estudiar volcanes submarinos.
+            <strong>Dato destacado:</strong> El Sahara se expande unos 48 km por año.
         </div>
 
-        <img src="https://picsum.photos/600/300?ocean3" loading="lazy" alt="Exploración submarina" class="img">
+        <img src="https://picsum.photos/600/300?desert" loading="lazy" alt="Desierto" class="img-alt">
     </section>
 
 </main>
 
-<footer>
-    <p>© 2025 - Proyecto Educativo del Océano</p>
+<footer class="footer-alt">
+    <p>© 2025 - Proyecto Educativo Naturaleza Global</p>
 </footer>
 
 </body>
