--- a/index.html
+++ b/index.html
@@ -4,63 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maravillas de la Naturaleza - Página Responsiva</title>
+    <title>Maravillas del Planeta - Diseño Alternado</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<header class="header-banner">
-    <div class="overlay">
-        <h1>Maravillas de la Naturaleza 🌿</h1>
-        <p class="device-msg">MÓVIL: Diseño adaptable en 1 columna</p>
-    </div>
+<header class="header-alt">
+    <h1>Maravillas del Planeta 🌍</h1>
+    <p class="device-msg">Diseño alternado — móvil: 1 columna</p>
 </header>
 
-<main class="container-alt">
+<main class="alt-container">
 
-    <section class="card-alt">
-        <h2>1. Bosques del Mundo</h2>
-        <p>Los bosques son el hogar de millones de especies y ayudan a mantener el equilibrio climático del planeta.</p>
+    <!-- Card 1 - ancho completo -->
+    <section class="card full">
+        <h2>1. Selvas Tropicales</h2>
+        <p>Las selvas tropicales son ecosistemas vibrantes donde se concentra la mayor biodiversidad del planeta.</p>
 
         <div class="info-box">
-            <strong>Sabías que...</strong> El 80% de la biodiversidad terrestre vive en los bosques.
+            <strong>Dato:</strong> Más del 25% de las medicinas provienen de plantas selváticas.
         </div>
 
-        <img src="https://picsum.photos/600/300?forest" loading="lazy" alt="Bosque frondoso" class="img-alt">
+        <img src="https://picsum.photos/700/300?jungle" loading="lazy" class="img">
     </section>
 
-    <section class="card-alt">
-        <h2>2. Montañas Majestuosas 🏔️</h2>
-        <p>Las montañas se formaron por movimientos tectónicos y erosionan lentamente por miles de años.</p>
-
-        <ul>
-            <li><strong>Cordilleras famosas:</strong> Andes, Himalayas, Alpes</li>
-            <li><strong>Cumbre más alta:</strong> Monte Everest (8,849 m)</li>
-        </ul>
+    <!-- Card 2 - izquierda -->
+    <section class="card left">
+        <h2>2. Glaciares ❄️</h2>
+        <p>Los glaciares guardan información climática de miles de años y son grandes reservas de agua dulce.</p>
 
         <div class="info-box">
-            <strong>Dato curioso:</strong> Hay montañas submarinas más altas que algunas en tierra.
+            <strong>Dato curioso:</strong> El 70% del agua dulce del planeta está en los glaciares.
         </div>
 
-        <img src="https://picsum.photos/600/300?mountain" loading="lazy" alt="Cordillera nevada" class="img-alt">
+        <img src="https://picsum.photos/700/300?glacier" loading="lazy" class="img">
     </section>
 
-    <section class="card-alt">
-        <h2>3. Desiertos Fascinantes 🏜️</h2>
-        <p>Aunque parezcan vacíos, los desiertos albergan una sorprendente cantidad de vida adaptada a condiciones extremas.</p>
+    <!-- Card 3 - derecha -->
+    <section class="card right">
+        <h2>3. Volcanes 🌋</h2>
+        <p>Los volcanes modelan el paisaje y son responsables de la creación de nuevas islas y terrenos fértiles.</p>
 
         <div class="info-box">
-            <strong>Dato destacado:</strong> El Sahara se expande unos 48 km por año.
+            <strong>Dato destacado:</strong> Existen más de 1,500 volcanes activos en el mundo.
         </div>
 
-        <img src="https://picsum.photos/600/300?desert" loading="lazy" alt="Desierto" class="img-alt">
+        <img src="https://picsum.photos/700/300?volcano" loading="lazy" class="img">
+    </section>
+
+    <!-- Card 4 - ancho completo -->
+    <section class="card full">
+        <h2>4. Arrecifes de Coral 🐚</h2>
+        <p>Los arrecifes protegen las costas, albergan miles de especies marinas y son esenciales para el equilibrio oceánico.</p>
+
+        <div class="info-box">
+            <strong>Atención:</strong> Más del 50% de los arrecifes del mundo están amenazados.
+        </div>
+
+        <img src="https://picsum.photos/700/300?coral" loading="lazy" class="img">
     </section>
 
 </main>
 
 <footer class="footer-alt">
-    <p>© 2025 - Proyecto Educativo Naturaleza Global</p>
+    <p>© 2025 - Explorando Nuestro Planeta</p>
 </footer>
 
 </body>
