--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header class="header-alt">
     <h1>Maravillas del Planeta 🌍</h1>
-    <p class="device-msg">Diseño alternado — móvil: 1 columna</p>
+    <!--p class="device-msg">Diseño alternado — móvil: 1 columna</p-->
 </header>
 
 <main class="alt-container">
